# video_compensation

./: .gitignore  README.md
test/: README.md
video_compensation/: CMakeLists.txt  block.cpp  block.h  filereader.cpp  filereader.h  filewriter.cpp  filewriter.h  frame.cpp  frame.h  frameinfo.cpp  frameinfo.h  main.cpp  motionvector.cpp  motionvector.h  pixel.cpp  pixel.h  video_compensation.pro  videocompensation.cpp  videocompensation.h
video_compensation/benchmark/: CMakeLists.txt  benchmark.cpp  mainbenchmark.cpp
video_compensation/data/: convert_mp4_to_yuv420p.sh  get_width_height.sh
video_compensation/project/: CMakeLists.txt  block.cpp  block.h  filereader.cpp  filereader.h  filewriter.cpp  filewriter.h  frame.cpp  main.cpp
video_compensation/run/: perf_stat.sh
video_compensation/scripts/: README.md  perf_stat.sh  run_programm.sh  save_mainbenchmark_result.sh  save_tmp_mainbenchmark.sh
video_compensation/scripts/mainbenchmark/: compare.sh  main_compare.sh  mainbenchmark.json  save_template.sh  save_tmp.sh
video_compensation/src/: CMakeLists.txt  filereader.cpp  frameinfo.h  pixel.h
video_compensation/unittests/: CMakeLists.txt  main.cpp  programmtest.cpp  programmtest.h  resources.cpp  resources.h  testblock.cpp  testblock.h  tests.cpp  tests.h
